# Projects

C_Projects/: CMakeLists.txt
C_Projects/01_Restaurant/: CMakeLists.txt
C_Projects/01_Restaurant/include/: Customer.h  CustomersList.h  Dish.h  DishQueue.h  Fridge.h  Kitchen.h  Menu.h  restaurant.h  tables.h
C_Projects/01_Restaurant/src/: Customer.c  CustomersList.c  Dish.c  DishQueue.c  Fridge.c  Kitchen.c  Menu.c  main.c  restaurant.c  tables.c
Django_Projects/todo_site/: db.sqlite3
Django_Projects/todo_site/todo/: models.py  views.py
Django_Projects/todo_site/todo/migrations/: 0001_initial.py  0002_alter_todo_date.py
Django_Projects/todo_site/todo_site/: settings.py  urls.py
Python_Projects/06_Rock_Paper_Scissors/: rock_paper_scissors.py
Python_Projects/11_Web_Scraper/: README.md  main.py
Python_Projects/11_Web_Scraper/src/args_parser/: args_activation.py  args_types.py  args_validation.py  genre_names.py
Python_Projects/11_Web_Scraper/src/book_specific/: availability.py  book.py  description.py  genre.py  price.py  rating.py  review.py  title.py
Python_Projects/11_Web_Scraper/src/data_collector/: book_urls.py  page_response.py  page_urls.py
Python_Projects/11_Web_Scraper/src/gui/: gui_result.py  gui_scr.py
Python_Projects/11_Web_Scraper/src/json_file_write/: export_json.py
Python_Projects/11_Web_Scraper/src/user_choice/: filtering.py  searching.py  sorting.py  (+3 more)
Python_Projects/11_Web_Scraper/tests/: test_args_activation.py  test_args_types.py  test_book_urls.py  test_genre_names.py  test_giu_scr.py  test_page_response.py  test_page_urls.py
(+9 files in other folders)
